--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 name = "composer"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["Christoph Wurst <christoph@winzerhof-wurst.at>"]
 description = "Rust wrapper around php's composer to install php dependencies"
+edition = "2018"
 
 [dependencies]
-failure = "0.1.1"
+failure = "0.1"
